[project]
name = "gpt-img-node"
version = "0.1.6"
description = "ComfyUI custom nodes for GPT image generation and ChatGPT LLM text responses through OpenAI API keys or Codex/ChatGPT OAuth."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/hub2vu/Comfyui-GPT-img-node"
Documentation = "https://github.com/hub2vu/Comfyui-GPT-img-node#readme"
"Bug Tracker" = "https://github.com/hub2vu/Comfyui-GPT-img-node/issues"

[tool.comfy]
PublisherId = "hub2vu"
DisplayName = "GPT img"
